# poly-erbf-benchmark

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
benchmark/: __init__.py
benchmark/analysis/: __init__.py  discontinuity_smoothness.py
benchmark/data/: loader.py  strata.py
benchmark/evaluation/: cv.py
benchmark/preprocessing/: fold_preprocessor.py
benchmark/tuning/: optuna_cv.py
making_plots/: generate_rank_linedot_plots_04feb26.py
perbf/: defaults.py
perbf/analysis/: __init__.py  model_complexity.py
perbf/data/: __init__.py  dataset_sizes_cache.csv  strata.py
perbf/evaluation/: __init__.py  cv.py  metrics.py
perbf/preprocessing/: __init__.py  fold_preprocessor.py
perbf/tuning/: __init__.py  optuna_cv.py
results/: per_fold_results.csv
results/analysis/: effective_nd.csv  local_stability_29jan26.csv  probe_regularity_29jan26.csv  probe_regularity_tabpfn_30jan26.csv  roughness_amplification_29jan26.csv  tail_ratio_tabpfn_08feb26.csv
results/benchmark_summary/: dataset_model_r2adj.csv  results_detailed.csv  stratum_size_matrix.csv  summary.csv  summary_by_size_stratum.csv  summary_by_stratum.csv  summary_by_target_type.csv  wins_by_accuracy_metric.csv
scripts/: compute_prediction_stability.py  compute_probe_regularity.py  compute_timing_table.py  export_per_fold_results.py  generate_boxstrip_r2adj.py  generate_cd_plots.py  generate_pareto_plots.py  regenerate_metadata_cache.py  run_benchmark.py  summarize_benchmark.py  verify_datasets.py
scripts/utils/: __init__.py  (+3 more)
tests/: test_smoothness_metrics_22jan26.py
